use Spring Boot with JavaFX